# veltrix

./: .cwizard.toml  .editorconfig  .gitattributes  .gitignore  .tcatignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  TODO.md  justfile
.github/workflows/: ci.yml  publish.yml
docs/: .gitignore
docs/api/contract/: data.md  os.md  services-ldap.md  services.md  unicode.md
docs/api/v0/: technitium-acme.md
docs/contributing/: codegen.md  commit-types.md
scripts/: build.sh  clean.sh  fmt.sh  license.sh  lint.sh  run.sh  test-coverage.sh  test.sh
scripts/libs/: common.sh
workspace/: .tcatignore  Cargo.toml  deny.toml
workspace/data/: missing-from-cldr.txt  unicode-cldr-en.xml
workspace/veltrix/: Cargo.toml
workspace/veltrix-codegen/: Cargo.toml
workspace/veltrix-codegen/src/: main.rs
workspace/veltrix-codegen/src/emoji/: mod.rs
workspace/veltrix-demo/: Cargo.toml
workspace/veltrix/examples/: data_clock_demo.rs  emojis_demo.rs  ldap_demo.rs  path_examples.rs  paths_demo.rs  services_demo.rs  unistd_demo.rs
workspace/veltrix/src/: error.rs  lib.rs
workspace/veltrix/src/data/: bools.rs  mod.rs  time.rs
workspace/veltrix/src/emojis/: constants.rs  details.rs  mod.rs
workspace/veltrix/src/os/: clock.rs  mod.rs
workspace/veltrix/src/os/paths/: constants.rs  mod.rs
workspace/veltrix/src/os/process/cmd/: async_cmd.rs  mod.rs  spec.rs  std_cmd.rs
workspace/veltrix/src/os/unistd/: lookup.rs  mod.rs  ops.rs  tests.rs  types.rs
workspace/veltrix/src/paths/: mod.rs
workspace/veltrix/src/services/: mod.rs
workspace/veltrix/src/services/caddy/: admin.rs  mod.rs  spec.rs  types.rs
workspace/veltrix/src/services/caddy/cli/: mod.rs
workspace/veltrix/src/services/docker/: mod.rs  socket.rs  spec.rs  types.rs
workspace/veltrix/src/services/docker/cli/: mod.rs  with_async.rs
workspace/veltrix/src/services/ldap/: client.rs  mod.rs  spec.rs  types.rs
workspace/veltrix/src/services/podman/: labels.rs  mod.rs  quadlet.rs  socket.rs  spec.rs  types.rs
workspace/veltrix/src/services/podman/cli/: mod.rs  with_async.rs
workspace/veltrix/src/services/systemd/: dbus.rs  mod.rs  spec.rs  types.rs
workspace/veltrix/src/services/systemd/cli/: mod.rs
workspace/veltrix/src/services/technitium/: client.rs  mod.rs  spec.rs  types.rs
workspace/veltrix/src/unicode/: mod.rs
workspace/veltrix/src/unicode/emojis/: constants.rs  details.rs  mod.rs
workspace/veltrix/src/unistd/: mod.rs
workspace/veltrix/src/users/: mod.rs
