[workspace]
members = [
    "veltrix", 
    "veltrix-codegen",
    "veltrix-demo",
]
resolver = "2"

[workspace.package]
version = "0.7.3"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kitechsoftware/veltrix"
homepage = "https://github.com/kitechsoftware/veltrix"
documentation = "https://docs.rs/veltrix"
readme = "../README.md"
keywords = ["unix", "services", "podman", "caddy", "unicode"]
categories = ["os::unix-apis", "api-bindings", "config", "development-tools"]

[workspace.dependencies]
veltrix = { path = "./veltrix", features = ["full"] }

thiserror = "2.0.18"
