[package]
name = "veltrix"
description = "General utilities"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
paths = []
emojis = []
unistd = ["dep:libc"]
full = ["paths", "unistd", "emojis"]

[dependencies]
thiserror.workspace = true
libc = {version = "0.2.186", optional = true}