[package]
name = "veltrix"
description = "Unix helpers, service integrations, and Unicode metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

async = ["tokio/process"]

podman = ["serde", "serde_json"]
podman-socket = ["podman", "async", "tokio/net", "tokio/io-util"]
podman-full = ["podman", "podman-socket"]

docker = ["serde", "serde_json"]
docker-socket = ["docker", "async", "tokio/net", "tokio/io-util"]
docker-full = ["docker", "docker-socket"]

caddy = ["async", "serde", "serde_json", "reqwest/json", "tokio/net", "tokio/io-util"]

systemd = []
technitium = ["async", "serde", "serde_json", "reqwest/json"]

data = []
data-bools = ["data"]
data-time = ["data"]
unistd = ["libc"]
unicode = []
unicode-emojis = []
emojis = ["unicode-emojis"]

full = ["podman-full", "docker-full", "caddy", "systemd", "technitium", "data-bools", "data-time", "unistd", "unicode", "unicode-emojis"]

[dependencies]
thiserror = "2"
libc = { version = "0.2", optional = true }

serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

tokio = { version = "1", optional = true, features = [] }

reqwest = { version = "0.12", optional = true, default-features = true, features = [] }
