[package]
name = "veltrix"
description = "Unix helpers, service integrations, and Unicode metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
legacy = []

async = ["tokio/process"]

podman = ["serde", "serde_json"]
podman-socket = ["podman", "async", "tokio/net", "tokio/io-util"]
podman-full = ["podman", "podman-socket"]

docker = ["serde", "serde_json"]
docker-socket = ["docker", "async", "tokio/net", "tokio/io-util"]
docker-full = ["docker", "docker-socket"]

caddy = ["async", "serde", "serde_json", "reqwest/json", "tokio/net", "tokio/io-util"]

systemd = ["serde", "serde_json"]
systemd-dbus = ["systemd"]
technitium = ["async", "serde", "serde_json", "reqwest/json"]

ldap = ["serde", "serde_json", "ldap3"]
ldap-sasl = ["ldap", "ldap3"]
ldap-gssapi = ["ldap-sasl", "ldap3/gssapi"]

data = []
data-bools = ["data"]
data-time = ["data"]
data-full = ["data-bools", "data-time"]

unistd = ["libc"]
unicode = []
unicode-emojis = ["unicode"]

full = ["podman-full", "docker-full", "caddy", "systemd-dbus", "technitium", "ldap-gssapi", "data-full", "unistd", "unicode-emojis"]

[dependencies]
thiserror = "2"
libc = { version = "0.2", optional = true }

serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

tokio = { version = "1", optional = true, features = [] }

reqwest = { version = "0.12", optional = true, default-features = true, features = [] }

ldap3 = { version = "0.11", optional = true }
